gcc/testsuite/rust/rustc/ui/dropck/unconstrained_const_param_on_drop.rs
struct Foo {}

impl<const UNUSED: usize> Drop for Foo {}
// { dg-error ".E0207." "" { target *-*-* } .-1 }
// { dg-error ".E0207." "" { target *-*-* } .-2 }

fn main() {}

